fixed overlapping slogan description

--- a/website/src/components/Landing/landing.scss
+++ b/website/src/components/Landing/landing.scss
@@ -1,7 +1,7 @@
 .landing {
   height: 100vh;
   display: grid;
-  grid-template-rows: 35% 30% 35%;
+  grid-template-rows: 30% 40% 30%;
 }
 
 .menuHeader {
